# reverser

./: .gitignore  Makefile  README.md  dune-project  modern-reason.opam  package.json  reverser.opam
.github/workflows/: build-test.yml
esy.lock/: index.json
lib/: dune  reverser.re
test/: dune  reverser.re
