opam-version: "2.0"
maintainer: "Alain Armand <aarmand.inbox@gmail.com>"
authors: "Alain Armand <aarmand.inbox@gmail.com>"
homepage: "https://github.com/idkjs/reverser"
bug-reports: "https://github.com/idkjs/reverser/issues"
license: "AGPL-3.0-or-later"
dev-repo: "git+https://github.com/idkjs/reverser.git"
doc: "https://idkjs.github.io/reverser/"
tags: ["git" "diff"]
depends: [
  "ocaml"
  "dune" {>= "2.5"}
  "ocaml-lsp-server" {dev}
  "reason"
]
pin-depends: [
  [ "ocaml-lsp-server.dev"
    "git+https://github.com/ocaml/ocaml-lsp.git#HEAD" ]
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "-j" jobs] {with-doc}
]
name: "reverser"
synopsis: "Template for a modern reason or ocaml project"
description: "Complete configuration of a reason or ocaml project
- package manager
- CI
- build system
- code formatting
- editor setup
"
